--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "tosts"
 version = "0.1.0"
 edition = "2024"
 description = "tosts"
-license="GPL-2"
+license="MIT"
 
 [dependencies]
 clap={version="4", features=["derive"]}
