--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tosts"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 description = "tosts"
 license="MIT"
@@ -13,3 +13,4 @@ rlimit="0.10.2"
 
 wait-timeout="0.2.1"
 indicatif = "0.18"
+rayon = "1.11.0"
